removed more images

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="contact-info bottom">
-                        <h2>Contacts</h2>
+                        <h2>Contact Us</h2>
                         <address>
                         E-mail: <a href="mailto:putmailidhere@mailid.com">#insertmailid</a> <br> 
                         Phone: +1 (123) 456 7890 <br> 
