--- a/index.html
+++ b/index.html
@@ -49,12 +49,10 @@
                         <span class="icon-bar"></span>
                     </button>
 
-                    <a class="navbar-brand" href="index.html">
-                    	<h1><img src="images/logo.png" alt="logo"></h1>
+                    <a class="navbar-brand wow" href="index.html">
+                    	<h1><img src="images/logo2.png" width=40px height =40px alt="logo">Let's-Sub</h1>
                     </a>
-                    
                 </div>
-                
             </div>
         </div>
     </header>
@@ -138,12 +136,20 @@
                 <div class="col-sm-12 text-center bottom-separator">
                     <img src="images/home/under.png" class="img-responsive inline" alt="">
                 </div>
-                <div class="col-md-4 col-sm-6">
-                    <div class="testimonial bottom">
+                <div class="col-md-4 col-sm-25">
+                    <div class="col-lg-1 col-lg-offset-20">
                         <!-- App links must come here -->
+                        <ul class="list-inline banner-social-buttons">
+                        <li>
+                    <a href="#"><img src="images/android.png" alt="android" height="100" width="210"></a>
+                        </li>
+                        <li>
+                    <a href="#"><img src="images/ios.png" alt="android" height="85" width="210"></a>
+                        </li>
+                    </ul>
                     </div> 
                 </div>
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-3 col-sm-6" align="right">
                     <div class="contact-info bottom">
                         <h2>Contact Us</h2>
                         <address>
