--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     </ul>
                     </div> 
                 </div>
-                <div class="col-md-3 col-sm-6" align="right">
+                <div class="col-md-3 col-sm-6 pull-right" align="right">
                     <div class="contact-info bottom">
                         <h2>Contact Us</h2>
                         <address>
