Some random change

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="Let'sSuv" content="">
+    <meta name="Vishwanath" content="">
     <title>Lets-Sub</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
@@ -49,7 +49,7 @@
                         <span class="icon-bar"></span>
                     </button>
 
-                    <a class="navbar-brand wow" href="index.html">
+                    <a class="navbar-brand" href="index.html">
                     	<h1><img src="images/logo2.png" width=40px height =40px alt="logo">Let's-Sub</h1>
                     </a>
                 </div>
@@ -141,10 +141,10 @@
                         <!-- App links must come here -->
                         <ul class="list-inline banner-social-buttons">
                         <li>
-                    <a href="#"><img src="images/android.png" alt="android" height="100" width="210"></a>
+                    <a href="#"><img src="images/android.png" alt="android" height="120" width="364"></a>
                         </li>
                         <li>
-                    <a href="#"><img src="images/ios.png" alt="android" height="85" width="210"></a>
+                    <a href="#"><img src="images/ios.png" alt="android" height="120" width="364"></a>
                         </li>
                     </ul>
                     </div> 
