--- a/index.html
+++ b/index.html
@@ -136,18 +136,12 @@
                 <div class="col-sm-12 text-center bottom-separator">
                     <img src="images/home/under.png" class="img-responsive inline" alt="">
                 </div>
-                <div class="col-md-4 col-sm-25">
-                    <div class="col-lg-1 col-lg-offset-20">
-                        <!-- App links must come here -->
-                        <ul class="list-inline banner-social-buttons">
-                        <li>
-                    <a href="#"><img src="images/android.png" alt="android" height="120" width="364"></a>
-                        </li>
-                        <li>
-                    <a href="#"><img src="images/ios.png" alt="android" height="120" width="364"></a>
-                        </li>
-                    </ul>
-                    </div> 
+                <div class="col-md-3 col-sm-6"></div>
+                <div class="col-md-3 col-sm-25">
+                    <a href="#"><img src="images/android.png" alt="android" height="90" width="250"></a>
+                </div>
+                <div class="col-md-3 col-sm-25">
+                    <a href="#"><img src="images/ios.png" alt="android" height="90" width="250"></a> 
                 </div>
                 <div class="col-md-3 col-sm-6 pull-right" align="right">
                     <div class="contact-info bottom">
