Deleted unwanted files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Let'sSuv" content="">
     <meta name="Vishwanath" content="">
-    <title>Lets-Sub</title>
+    <title>Let's-Sub</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/animate.min.css" rel="stylesheet"> 
@@ -64,7 +64,7 @@
                 <div class="main-slider">
                     <div class="slide-text">
                         <h1>We Are Let's-Sub</h1>
-                        <p>Insert Company profile here..</p>
+                        <p>Insert Company details here..</p>
                     </div>
                     <img src="images/home/slider/hill.png" class="slider-hill" alt="slider image">
                     <img src="images/home/slider/house.png" class="slider-house" alt="slider image">
