Removed android logo

--- a/index.html
+++ b/index.html
@@ -136,11 +136,8 @@
                 <div class="col-sm-12 text-center bottom-separator">
                     <img src="images/home/under.png" class="img-responsive inline" alt="">
                 </div>
-                <div class="col-md-3 col-sm-6"></div>
-                <div class="col-md-3 col-sm-25">
-                    <a href="#"><img src="images/android.png" alt="android" height="90" width="250"></a>
-                </div>
-                <div class="col-md-3 col-sm-25">
+                <div class="col-md-4 col-sm-25"></div>
+                <div class="col-md-4 col-sm-25" align="center">
                     <a href="#"><img src="images/ios.png" alt="android" height="90" width="250"></a> 
                 </div>
                 <div class="col-md-3 col-sm-6 pull-right" align="right">
