--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="row">
                 <div class="main-slider">
                     <div class="slide-text">
-                        <h1>We Are Let's-Sub</h1>
+                        <h1>Welcome to Let's-Sub</h1>
                         <p>Insert Company details here..</p>
                     </div>
                     <img src="images/home/slider/hill.png" class="slider-hill" alt="slider image">
