--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="main-slider">
                     <div class="slide-text">
                         <h1>Welcome to Let's-Sub</h1>
-                        <p>Insert Company details here..</p>
+                        <p>Your Social Subletting Marketplace - it Starts with a Swipe</p>
                     </div>
                     <img src="images/home/slider/hill.png" class="slider-hill" alt="slider image">
                     <img src="images/home/slider/house.png" class="slider-house" alt="slider image">
@@ -121,7 +121,7 @@
                     <div class="clients text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">
                         <p><img src="images/home/clients.png" class="img-responsive" alt=""></p>
                         <h1 class="title">For The App Click on the download button at the bottom</h1>
-                        <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> Ut enim ad minim veniam, quis nostrud </p>
+                        <p>So what are you waiting for? Start Swiping or Clicking to find the Sublet or Subletter of your dreams!<br> Download today for free</p>
                     </div>
                     </div>
                 </div>
